# Bug-World-Software-Engineering-Project-

./: README.md  progress.txt  todolist.txt
Assembler/: TestCase2  (+2 more)
phase3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  PROGRESS.txt  README.md  cmake_install.cmake  compile_commands.json
phase3/nbproject/: configurations.xml  project.xml
phase3/nbproject/private/: Default.properties  configurations.xml  private.xml
phase3/src/: CMakeLists.txt  Makefile  cmake_install.cmake  properties.h
phase3/src/assembler/: CMakeLists.txt  Makefile  Program.cpp  Program.h  cmake_install.cmake  main.cpp
phase3/src/assembler/commands/: I_default.cpp  I_default.h  I_direction.cpp  I_direction.h  I_drop.cpp  I_drop.h  I_flip.cpp  I_flip.h  I_mark.cpp  I_mark.h  I_move.cpp  I_move.h  I_pickup.cpp  I_pickup.h  I_sense.cpp  I_sense.h  I_turn.cpp  I_turn.h  I_unmark.cpp  I_unmark.h  Instruction.cpp  Instruction.h  Labels.cpp  Labels.h  utility.cpp  utility.h
phase3/src/simulator/: Bug.cpp  Bug.h  CMakeLists.txt  Cell.cpp  Cell.h  ExposedTypes.h  Makefile  Marker.cpp  Marker.h  Program.cpp  Program.h  World.cpp  World.h  cmake_install.cmake
phase3/src/simulator/commands/: CMakeLists.txt  I_direction.cpp  I_direction.h  I_drop.cpp  I_drop.h  I_flip.cpp  I_flip.h  I_mark.cpp  I_mark.h  I_move.cpp  I_move.h  I_pickup.cpp  I_pickup.h  I_sense.cpp  I_sense.h  I_turn.cpp  I_turn.h  I_unmark.cpp  I_unmark.h  Instruction.h  Makefile  cmake_install.cmake
phase3/test/: CMakeLists.txt  Makefile  cmake_install.cmake  testBug  testCell  testMarker
phase3/test/assembler/: TestInstructions.cpp  TestProgram.cpp  test.buggy
phase3/test/simulator/: BugTest.cpp  BugTest.h  BugTestRunner.cpp  CellTest.cpp  CellTest.h  I_directionTest.cpp  I_directionTest.h  MarkerTest.cpp  MarkerTest.h  MarkerTestRunner.cpp  WorldTest.cpp  WorldTest.h
(+65 files in other folders)
